Fix #1 Add API token support